2023-11-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Optimize towards djnz use.
	* sdccman.lyx:
	  Fix dead link.
	* src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c:
	  Fix an mcs51 codegen bug affecting calls to reentrant functions where the last parameter is a struct, and some registers are live across the call.

2023-11-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-3675.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c:
	  Fix bug #3675.

2023-11-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/SDCCicode.h:
	  Directly create iCode chain instead of via intermediate set-style linked list.

2023-11-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3675.c:
	  Regression test for bug #3675.
	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/SDCCgenconstprop.cc,
	  src/SDCClrange.c:
	  Code refactoring for iCode operand replacement.
	* src/mcs51/gen.c:
	  Fix a typo.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h:
	  Provide mcs51IsParmInCall.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Replace further uses of fReturn by aopArg and aopRet.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/ralloc.c,
	  src/mcs51/ralloc.h:
	  Fix mcs51_regname_to_idx, patch by Oleg Endo.
	* src/mcs51/peeph.def:
	  Fix peephole optimizer rule 186.e, patch by Oleg Endo.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Improve mcs51 calling convention documentation.
	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/main.c,
	  src/mcs51/rtrack:
	  Use aopArg, provide mcs51IsReturned and mcs51IsRegArg.
